kubernetes/apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  type: ClusterIP
  selector:
    app: kavita
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
